--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,21 +1,19 @@
 <div id="<%= dom_id product %>">
   <p>
-    <img src = <%= product.picture %> >
+    <i><h4><%= product.name %></h4></i>
   </p>
 
   <p>
-    <strong>Name:</strong>
-    <%= product.name %>
+    <img src = <%= product.picture %> width="400" height="100" >
   </p>
-
+  
   <p>
-    <strong>Description:</strong>
-    <%= product.description %>
+    <strong>Features and Description:</strong><marquee direction = "up" height = 80px scrollamount="2"><%= product.description %></marquee>
   </p>
 
   <p>
     <strong>Price:</strong>
-    ₹ <%= product.price %>
+    <b><i>₹</b> <%= product.price %></i>
   </p>
 
 </div>
